corrected overflow issue with picturebox

--- a/src/services/Gallery/Gallery.scss
+++ b/src/services/Gallery/Gallery.scss
@@ -33,13 +33,16 @@ ul.gallery-list li {
 }
 
 ul.gallery-list > div  {
-  width: 24vw;
-  height: 24vw;
+  width: 33vw;
+  height: auto;
   overflow: hidden;
   align-content: flex-start;
   position: relative;
   cursor: pointer;
   margin: .5vw; /* .5 on each side is 1vw total plus the 24 above so each image takes up 1/4 width, for a total of 4 on each row.*/  
+  @media (min-width: $tablet) {
+    width: 18vw;
+  }
 }
 
 
